--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,12 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Project-specific
+outputs/
+results/
+data/
+wandb/
+*.tar.gz
+slurm_*.out
+slurm_*.err
