--- a/configs/garipov/vgg16_endpoints.yaml
+++ b/configs/garipov/vgg16_endpoints.yaml
@@ -5,16 +5,17 @@ experiment_name: "garipov_vgg16_endpoints"
 output_root: "results/garipov/vgg16/endpoints"
 
 dataset: "CIFAR10"
-data_path: "/path/to/cifar"
+data_path: "./data"
 transform: "VGG"
 model: "VGG16"
 
 epochs: 200
+save_freq: 50
 lr: 0.05
 wd: 5e-4
 use_test: true
 
-seeds: [0, 1, 2, 3, 4]
+seeds: [0, 1]
 
 use_wandb: true
 project_name: "thesis-mode-connectivity"
