--- a/configs/garipov/vgg16_endpoints.yaml
+++ b/configs/garipov/vgg16_endpoints.yaml
@@ -10,7 +10,8 @@ transform: "VGG"
 model: "VGG16"
 
 epochs: 200
-save_freq: 50
+save_intermediate: true   # If true, save checkpoints every save_freq epochs
+save_freq: 50            # Only used if save_intermediate=true
 lr: 0.05
 wd: 5e-4
 use_test: true
