corrected damaged checkpoint

--- a/configs/garipov/vgg16_curve_mirror.yaml
+++ b/configs/garipov/vgg16_curve_mirror.yaml
@@ -18,7 +18,7 @@ curve: "Bezier"  # Bezier curve for mode connectivity
 num_bends: 3  # 3 = start, middle, end
 
 # Training
-epochs: 200
+epochs: 150  # Using 150 (checkpoint-200 corrupted)
 save_intermediate: true
 save_freq: 50
 lr: 0.015  # Recommended LR for VGG16 curve training
