--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ dependencies = [
     "rich",
     "tabulate",
     "torchaudio (>=2.9.1,<3.0.0)",
+    "seaborn (>=0.13.2,<0.14.0)",
+    "umap-learn (>=0.5.9.post2,<0.6.0)",
+    "imageio (>=2.37.2,<3.0.0)",
 ]
 
 [tool.poetry]
