--- a/configs/garipov/vgg16_regularized_endpoints.yaml
+++ b/configs/garipov/vgg16_regularized_endpoints.yaml
@@ -13,12 +13,12 @@ epochs: 200
 save_intermediate: true   # If true, save checkpoints every save_freq epochs
 save_freq: 50            # Only used if save_intermediate=true
 lr: 0.05
-wd: 5e-4                 # Increased from 5e-4 for better regularization
-use_test: true          # Use train/val/test split from training data
+wd: 5e-4
+use_test: true
 
 # Early stopping parameters
-early_stopping: true
-patience: 50             # Stop if no improvement for 20 epochs
+early_stopping: false
+patience: 50             # Stop if no improvement for 50 epochs
 min_delta: 0.0           # Minimum improvement to count as better (0.0 = any improvement)
 
 seeds: [1, 0]
