--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "seaborn (>=0.13.2,<0.14.0)",
     "umap-learn (>=0.5.9.post2,<0.6.0)",
     "imageio (>=2.37.2,<3.0.0)",
+    "pillow (>=12.0.0,<13.0.0)",
 ]
 
 [tool.poetry]
