--- a/configs/garipov/neuronswap/vgg16_curve_neuronswap_late2_reg.yaml
+++ b/configs/garipov/neuronswap/vgg16_curve_neuronswap_late2_reg.yaml
@@ -23,6 +23,7 @@ save_intermediate: true
 save_freq: 30
 lr: 0.01
 wd: 5e-4
+seed: 1    # Random seed (default from dnn-mode-connectivity)
 
 use_test: true
 use_wandb: true
